# PiedPiper

./: .gitignore  COVER_LETTER_SUNO_PRODUCT_NYC.md  README.md
.github/workflows/: eval-check.yml  frontend.yml  test.yml
backend/: .gitignore  README.md  catalog.yaml  pyproject.toml
backend/backend/: __init__.py  acrcloud_engine.py  api.py  clap_engine.py  clap_windowed.py  cli.py  config.py  corpus_io.py  corruptions.py  librosa_engine.py  muq_engine.py  scoring.py  signals.py  similarity.py  sonics.py
backend/backend/scripts/: __init__.py  _corpus_writer.py  _fma_loader.py  _itunes_client.py  _jamendo_loader.py  build_golden_set.py  enrich_jamendo.py  rebuild_corpus.py  run_eval.py  verify_matching.py
backend/eval_input/: golden_set_input.example.yaml  named_examples.example.yaml
backend/scripts/: parity_check.mjs
backend/tests/: conftest.py  test_acrcloud_engine.py  test_api.py  test_clap_engine.py  test_corpus_ingest.py  test_corruptions.py  test_neighbors_endpoint.py  test_run_eval.py  test_scoring_parity.py  test_signals.py  test_signals_e2e.py
deploy/: sync_to_hf.sh
deploy/hf_space/: .env.example  Dockerfile  README.md  app.py  requirements.txt
docs/decisions/: 0001-similarity-calibration.md  0002-swap-clap-for-muq-mulan.md  0003-catalog-scale-calibration.md
factory/artifacts/: CLAUDE_PRESEARCH.md  CLAUDE_REVIEW_CONCERNS.md  CLAUDE_UI_DESIGN_PROMPT.md  CODEX_DECIDE_GATE_FEEDBACK_FOR_CLAUDE.md  CODEX_DECIDE_GATE_PROMPT.md  CODEX_MUQ_MULAN_MATCHING_NOTES_FOR_CLAUDE.md  CODEX_PHASE_1.md  CODEX_PHASE_1_5.md  CODEX_PHASE_1_HANDOFF_FEEDBACK_FOR_CLAUDE.md  CODEX_PHASE_1_IMPLEMENTATION_NOTES_FOR_CLAUDE.md  CODEX_PHASE_1_PROMPT.md  CODEX_PHASE_1_READY_FEEDBACK_FOR_CLAUDE.md  CODEX_PHASE_2.md  CODEX_PHASE_3.md  CODEX_PHASE_4.md  CODEX_PHASE_5.md  CODEX_PHASE_6.md  CODEX_PHASE_6_BACKEND_SCOPE_PROMPT.md  CODEX_PHASE_7.md  CODEX_PRESEARCH.md  CODEX_PRESEARCH_PROMPT.md  CODEX_PROJECT_PLAN_FEEDBACK_FOR_CLAUDE.md  CODEX_TIGHTENING_NOTES_FOR_CLAUDE.md  CODEX_TIGHTENING_PROMPT.md  PRD.md  (+7 more)
quality-scorer/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
(+34 files in other folders)
