[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundcheck-backend"
version = "0.1.0"
description = "Soundcheck — AI-music technical-quality scorer backend (Crate Phase 1)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
runtime = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",
  "numpy>=1.26",
  "soundfile>=0.12",
  "librosa>=0.10",
  "transformers>=4.45",
  "torch>=2.4",
  "tqdm>=4.66",
  "datasets>=3.0",
]
ingest = [
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip slow tests by default; opt in with `pytest -m slow` or `pytest -m ""`.
addopts = "-q -m 'not slow'"
markers = [
  "slow: tests that load large ML models or hit the network",
]
