[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piedpiper-backend"
version = "0.1.0"
description = "PiedPiper — acoustic-similarity scanner for AI-generated music."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
runtime = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",
  "numpy>=1.26",
  "soundfile>=0.12",
  "librosa>=0.10",
  "transformers>=4.45",
  "torch>=2.4",
  "tqdm>=4.66",
  "datasets>=3.0",
  # ADR-0002: MuQ-MuLan audio encoder (Tencent AI Lab, 2025 SOTA on
  # MagnaTagATune zero-shot). Replaces LAION-CLAP as the primary similarity
  # backbone. CC-BY-NC 4.0 license — non-commercial use only.
  "muq>=0.1",
]
ingest = [
  "httpx>=0.27",
  "pyyaml>=6.0",
]
observability = [
  "sentry-sdk[fastapi]>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip slow tests by default; opt in with `pytest -m slow` or `pytest -m ""`.
addopts = "-q -m 'not slow'"
markers = [
  "slow: tests that load large ML models or hit the network",
]
